--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -108,30 +108,36 @@ last drop day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lec
-P1 (from slide 23)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P1 (cont.) </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Jan
 31<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P1 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 1<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 2<br>
-      <div style="text-align: center;"><span style="font-style: italic;"></span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lectures
+P1, P2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 3<br>
+      <div style="text-align: center;">Snow day, no class<br>
+      </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Overview homework</span><br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+P2 (from slide 24), P3</span><br>
+      </div>
+      <div style="text-align: center;">Due:
+Overview homework<br>
       </div>
       </td>
     </tr>
@@ -195,7 +201,7 @@ last withdrawal day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 2<br>
-      <div style="text-align: center;">Midterm Exam<br>
+      <div style="text-align: center;">Midterm Exam (Units O, P, ...)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
