--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -131,12 +131,11 @@ P1, P2 </div>
       <div style="text-align: center;">Snow day, no class<br>
       </div>
       </td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
+      <td style="background-color: rgb(0, 0, 0);" valign="top">Feb
 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-P2 (from slide 24), P3</span><br>
-      </div>
-      <div style="text-align: center;">Due:
+      <div style="text-align: center; background-color: rgb(0, 0, 0);"><span
+ style="font-style: italic;"></span>Snow day, no class </div>
+      <div style="text-align: center; background-color: rgb(0, 0, 0);">Due:
 Overview homework<br>
       </div>
       </td>
@@ -144,18 +143,24 @@ Overview homework<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 7<br>
+      <div style="text-align: center;">Lectures P2, P3 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 9<br>
+      <div style="text-align: center;">Lecture
+P3 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 10<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 11<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+P3 (from slide 32)</span><br>
+      </div>
       </td>
     </tr>
     <tr>
