--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -20,15 +20,21 @@ font-family:Verdana
 <b><font color="#868cde" face="Verdana" size="2">3460:4/526<br>
 HOMEWORK
 AND PROGRAMS <br>
-&nbsp;&nbsp;&nbsp; Overview
-homework,
-due TBD.<br>
-&nbsp;&nbsp;&nbsp; Lab 1, due TBD.<br>
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; Description, optional seed file.<br>
-&nbsp;&nbsp;&nbsp; Lab 2, due TBD. Description.<br>
-&nbsp;&nbsp;&nbsp; Lab 3, due TBD.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,
-seed
+&nbsp;&nbsp;&nbsp; Overview HW,
+due February 4.<br>
+&nbsp;&nbsp;&nbsp; Lab 1, due March 4.<br>
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; Part 1A: <a
+ href="../labs/lab%201a%20process%20creation%20and%20control.pdf">description</a>,
+<a href="../labs/fork-test.c">fork-test.c</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="../labs/fork.c">fork.c</a>, <a href="../labs/fork-data.c">fork-data.c</a>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Part 1B: <a
+ href="../labs/lab%201b%20interprocess%20communciation.pdf">description</a>,
+<a href="../labs/pipe-test.c">pipe-test.c</a>.<br>
+&nbsp;&nbsp;&nbsp; Lab 2, due April 1. Description.<br>
+&nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
 file.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
