--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -214,6 +214,9 @@ last withdrawal day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 4<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Labs 1A, 1B</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -293,6 +296,9 @@ Break<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 1<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -351,6 +357,9 @@ Break<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 29<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
       </td>
     </tr>
     <tr valign="top">
