--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -24,13 +24,13 @@ AND PROGRAMS <br>
 due February 4.<br>
 &nbsp;&nbsp;&nbsp; Lab 1, due March 4.<br>
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; Part 1A: <a
- href="../labs/lab%201a%20process%20creation%20and%20control.pdf">description</a>,
-<a href="../labs/fork-test.c">fork-test.c</a>,<br>
+ href="../labs/lab%201a%20process%20creation%20and%20control.pdf" target="_top">description</a>,
+<a href="../labs/fork-test.c" target="_top">fork-test.c</a>,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../labs/fork.c">fork.c</a>, <a href="../labs/fork-data.c">fork-data.c</a>.<br>
+<a href="../labs/fork.c" target="_top">fork.c</a>, <a href="../labs/fork-data.c" target="_top">fork-data.c</a>.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Part 1B: <a
- href="../labs/lab%201b%20interprocess%20communciation.pdf">description</a>,
-<a href="../labs/pipe-test.c">pipe-test.c</a>.<br>
+ href="../labs/lab%201b%20interprocess%20communciation.pdf" target="_top">description</a>,
+<a href="../labs/pipe-test.c" target="_top">pipe-test.c</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due April 1. Description.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
