--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -158,34 +158,46 @@ P3 (cont.) </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 11<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-P3 (from slide 32)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+P3 (cont.) </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-14</td>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+P3 (cont.) </div>
+      </td>
       <td style="vertical-align: top; background-color: rgb(0, 0, 0);">Feb
 15<br>
-      <div style="text-align: center;">Pres. Day Observed<br>
-      </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 16<br>
+      <div style="text-align: center;">Lectures P3, P4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 17</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 18<br>
+      <div
+ style="text-align: center; background-color: rgb(51, 102, 255);">Recorded
+synch examples<br>
+      </div>
       </td>
     </tr>
     <tr>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
+      <td
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">Feb
 21<br>
+      <div
+ style="text-align: center; background-color: rgb(51, 102, 255);"><span
+ style="font-style: italic;">Lecs
+P4 (from slide 20)</span> </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 22<br>
+      <div style="text-align: center;">Pres. Day Observed<br>
+      </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 23</td>
