--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -32,7 +32,7 @@ due February 4.<br>
  href="../labs/lab%201b%20interprocess%20communciation.pdf" target="_top">description</a>,
 <a href="../labs/pipe-test.c" target="_top">pipe-test.c</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due April 1. <a
- href="../labs/lab%202%20bumper%20cars.pdf">Description</a>.<br>
+ href="../labs/lab%202%20bumper%20cars.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
