--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -106,12 +106,13 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       </span></span><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);"><span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Friday October 1 2021</span><span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Friday
+October 1 2021<span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"> </span><span style="font-style: italic;"></span></li>
+ style="font-weight: bold;"></span> (<span style="font-style: italic;">already
+passed</span>)<span style="font-weight: bold;"> </span><span
+ style="font-style: italic;"></span></li>
     <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
  style="font-weight: bold;">Friday April 1 2022<br>
@@ -194,8 +195,8 @@ Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
       <span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Wednesday December 1 2021</span><span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Wednesday
+December 1 2021 (<span style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"> </span><span
