--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -190,9 +190,8 @@ synch examples<br>
  style="vertical-align: top; background-color: rgb(51, 102, 255);">Feb
 21<br>
       <div
- style="text-align: center; background-color: rgb(51, 102, 255);"><span
- style="font-style: italic;">Lecs
-P4 (from slide 20)</span> </div>
+ style="text-align: center; background-color: rgb(51, 102, 255);">Lecture
+P4 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 22<br>
@@ -200,15 +199,23 @@ P4 (from slide 20)</span> </div>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-23</td>
+23<br>
+      <div style="text-align: center;">Lecture
+P4 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Feb 24</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
-25</td>
+25<br>
+      <div style="text-align: center;">Lectures P4, P5 </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+P5 (from slide 24)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Sun:
 last withdrawal day</span><br>
       </div>
@@ -218,7 +225,7 @@ last withdrawal day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 2<br>
-      <div style="text-align: center;">Midterm Exam (Units O, P, ...)<br>
+      <div style="text-align: center;">Midterm Exam (Units O1-O5, P1-P4)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
