--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -213,9 +213,8 @@ P4 (cont.) </div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Feb
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-P5 (from slide 24)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+P5 (cont.) </div>
       <div style="text-align: center;"><span style="font-style: italic;">Sun:
 last withdrawal day</span><br>
       </div>
@@ -233,20 +232,26 @@ last withdrawal day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 4<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Labs 1A, 1B</span><br>
+      <div style="text-align: center;">Lectures P5, M1 </div>
+      <div style="text-align: center;">Due:
+Labs 1A, 1B<br>
       </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 7<br>
+      <div style="text-align: center;">Lectures M1, M2<br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 8<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 9<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+M2 (from slide 7), M1</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 10</td>
@@ -396,7 +401,9 @@ Lab 3</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
-      <div style="text-align: center;">Final Exam Scheduled, 12:15 PM<br>
+      <div style="text-align: center;">Final Exam Scheduled<br>
+(Units P5, M1-M2, ...)<br>
+12:15 PM<br>
       </div>
       </td>
     </tr>
