--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -250,7 +250,7 @@ Labs 1A, 1B<br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 9<br>
       <div style="text-align: center;"><span style="font-style: italic;">Lecs
-M2 (from slide 7), M1</span><br>
+M2 (from slide 7)</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
