--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -249,30 +249,38 @@ Labs 1A, 1B<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 9<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-M2 (from slide 7)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+M2 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 10</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 11<br>
+      <div style="text-align: center;">Review, Lecture
+M2 (cont.) </div>
       </td>
     </tr>
     <tr bgcolor="#ffffff">
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
-14 </td>
+14<br>
+      <div style="text-align: center;">Lecture
+M2 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 15<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 16<br>
+      <div style="text-align: center;">Lectures M2, D1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 17<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 18<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lec
+D1 (from slide 26)</span><br>
+      </div>
       </td>
     </tr>
     <tr>
@@ -319,9 +327,9 @@ Break<br>
  valign="top">Mar 31<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-1<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 2</span><br>
+1<br style="font-style: italic;">
+      <div style="text-align: center;">Due:
+Lab 2<br>
       </div>
       </td>
     </tr>
