--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -38,7 +38,7 @@ due February 4.<br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp;&nbsp; <a href="../labs/pipe-test.c" target="_top">pipe-test.c</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due April 1. <a
- href="../labs/lab%202%20bumper%20cars.pdf">Description</a>.<br>
+ href="../labs/lab%202%20bumper%20cars.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
