--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -40,9 +40,12 @@ due February 4.<br>
 &nbsp;&nbsp;&nbsp; Lab 2, due April 1. <a
  href="../labs/lab%202%20bumper%20cars.pdf" target="_top">Description</a>.<br>
 &nbsp;&nbsp;&nbsp; Lab 3, due April 29.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, disk image,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; seed
-file.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab3/lab%203%20simple%20file%20system.pdf" target="_top">Description</a>,
+<a href="../labs/lab3/floppya.img" target="_top">disk image</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../labs/lab3/filesys.c" target="_top">seed
+file</a>.<br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
