--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -278,9 +278,8 @@ M2 (cont.) </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0"
  valign="top">Mar 18<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lec
-D1 (from slide 26)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture
+D1 (cont.) </div>
       </td>
     </tr>
     <tr>
@@ -316,6 +315,9 @@ Break<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+D1 (from slide 60), D2</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29<br>
@@ -410,7 +412,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
       <div style="text-align: center;">Final Exam Scheduled<br>
-(Units P5, M1-M2, ...)<br>
+(Units P5, M1-M2, D1-D2, F1-F2, ...)<br>
 12:15 PM<br>
       </div>
       </td>
