--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -315,21 +315,22 @@ Break<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-D1 (from slide 60), D2</span><br>
-      </div>
+      <div style="text-align: center;">Lectures D1, D2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 29<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Mar
 30<br>
+      <div style="text-align: center;">Lectures D2, F1</div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Mar 31<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-1<br style="font-style: italic;">
+1<br>
+      <div style="text-align: center;">Lecture
+F1 (cont.) </div>
       <div style="text-align: center;">Due:
 Lab 2<br>
       </div>
@@ -338,17 +339,24 @@ Lab 2<br>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 4<br>
+      <div style="text-align: center;">Lecture
+F2 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 5<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 6<br>
+      <div style="text-align: center;">Lecture
+F2 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 7&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+X1 (from start)</span><br>
+      </div>
       </td>
     </tr>
     <tr>
