--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -354,27 +354,37 @@ F2 (cont.) </div>
  valign="top">Apr 7&nbsp;</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 8<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-X1 (from start)</span><br>
-      </div>
+      <div style="text-align: center;"><span style="font-style: italic;"></span>Lecture
+X1 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-11</td>
+11<br>
+      <div style="text-align: center;">Lecture X1 (cont.)<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 12</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-13</td>
+13<br>
+      <div style="text-align: center;">Lecture X1 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 14</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 15<br>
+      <div style="text-align: center;">Lecture
+X2 </div>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-18</td>
+18<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+X2 (from slide 27)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
@@ -420,7 +430,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
       <div style="text-align: center;">Final Exam Scheduled<br>
-(Units P5, M1-M2, D1-D2, F1-F2, ...)<br>
+(Units P5, M1-M2, D1-D2, F1-F2, X1-)<br>
 12:15 PM<br>
       </div>
       </td>
