--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -381,22 +381,27 @@ X2 </div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 18<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-X2 (from slide 27)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture X2 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 19</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-20</td>
+20<br>
+      <div style="text-align: center;">Lectures X2, X3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 21</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
-22</td>
+22<br>
+      <div style="text-align: center;">Lecture X3 (cont.) </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 25<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecs
+X3 (from slide 59)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 26<br>
@@ -430,7 +435,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" bgcolor="#c0c0c0">May
 6<br>
       <div style="text-align: center;">Final Exam Scheduled<br>
-(Units P5, M1-M2, D1-D2, F1-F2, X1-)<br>
+(Units P5, M1-M2, D1-D2, F1-F2, X1-X3)<br>
 12:15 PM<br>
       </div>
       </td>
