--- a/teaching/cs426/sp22cal.html
+++ b/teaching/cs426/sp22cal.html
@@ -399,23 +399,23 @@ X2 </div>
     <tr>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 25<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecs
-X3 (from slide 59)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture X3 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 26<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 27<br>
+      <div style="text-align: center;">Lectures X4, X5</div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Apr 28<br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Apr
 29<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 3</span><br>
+      <div style="text-align: center;">Final Exam Given<br>
+Due:
+Lab 3<br>
       </div>
       </td>
     </tr>
