--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,37 +28,34 @@
 </h2>
 <ul>
   <li><a href="cs426/index.html">3460:4/526 - Operating Systems (Fall
-'21 and Spring '22)</a></li>
+'22 and Spring '23)</a></li>
+  <li> 3460:677 - Parallel Processing (Fall '22)<br>
+  </li>
 </ul>
 <h2>Previous Courses</h2>
 <ul>
   <li>3460:209 - Computer Science I</li>
   <li>3460:210 - Computer Science II</li>
-  <li>3460:316 - Data Structures<br>
-  </li>
-  <li>3460:389 - Intermediate Topics in
-Computer Science: Cloud
-Computing<br>
-  </li>
-  <li>3460:4/521 - Object-Oriented
-Programming</li>
+  <li>3460:316 - Data Structures</li>
   <li>3460:4/540 - Compiler Design</li>
   <li>3460:4/577 - Introduction to Parallel
-Processing<br>
-  </li>
-  <li>3460:490 - Senior Seminar in Computer
-Science<br>
-  </li>
-  <li>3460:635 - Advanced Algorithms</li>
+Processing </li>
   <li>3460:641 - Optimizations for Parallel
 Compilers</li>
-  <li> 3460:677 - Parallel Processing</li>
 </ul>
 <h2>Obsolete Courses</h2>
 <ul>
-  <li>3460:306 - Assembly Language Programming </li>
-  <li>3460:4/565 - Computer Architecture </li>
-  <li>3460:626 - Advanced Operating Systems </li>
+  <li>3460:306 - Assembly Language Programming</li>
+  <li>3460:389 - Intermediate Topics in
+Computer Science: Cloud
+Computing</li>
+  <li>3460:4/521 - Object-Oriented
+Programming</li>
+  <li>3460:4/565 - Computer Architecture</li>
+  <li>3460:490 - Senior Seminar in Computer
+Science</li>
+  <li>3460:626 - Advanced Operating Systems</li>
+  <li>3460:635 - Advanced Algorithms</li>
   <li>3460:665 - Advanced Computer Architecture</li>
 </ul>
 <span style="font-style: italic;">
@@ -66,3 +63,4 @@ Compilers</li>
 </span>
 </body>
 </html>
+
