--- a/teaching/honors/index.html
+++ b/teaching/honors/index.html
@@ -49,122 +49,28 @@ Honors Faculty Advisor: </span>Dr. Tim O'Neil<span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span style="font-weight: bold;">For
-Students Graduating in Summer 2022</span>
-<ul>
-  <li>CS majors: have registered for <span
- style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:497 Individual Study
-in
-Computer </span><span style="color: rgb(255, 102, 102);">Science<span
- style="color: rgb(0, 0, 0);"> </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
-the <span style="font-weight: bold;">Spring 2022</span> semester</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
-  <ul>
-    <li>... if you haven't already done so in a prior semester.</li>
-  </ul>
-  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
-credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:498 Senior Honors
-Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
- style="font-weight: bold;">Summer 2022</span> semester.<br>
-    </span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">At most <span
- style="font-weight: bold; text-decoration: underline;">six</span><span
- style="font-weight: bold;"> </span>credits
-of 3460:497/498 count towards graduation; schedule accordingly.</span></span></li>
-  </ul>
-  <li>CS majors: <span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">complete the course substitution
-paperwork so 497/498 will
-count as a c.s. elective.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
-a faculty sponsor in place and
-be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">working on your project</span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
-    </span>deadlines </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
-by Honors College; <a
- href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
-here</a>):</span></span></li>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"> through <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
-      <span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span>Wednesday
-December 1 2021 (<span style="font-style: italic;">already passed</span>)<span
  style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
- style="font-weight: bold;"></span><span style="font-weight: bold;"> </span><span
- style="font-style: italic;"></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
- style="font-weight: bold;">Friday July 8 2022<br>
-      </span></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
- style="font-weight: bold;">Friday July 15 2022</span></span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
-  </ul>
-  <ul>
-    <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
- style="font-weight: bold;">Tuesday July 26 2022 </span>(3 weeks
-before grades are due)</span></span></li>
-    <li>Final electronic submission of completed project report with
-all signatures <span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">to <a
- href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
-Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
- style="font-weight: bold;">Friday July 29 2022<br>
-      </span></li>
-    <ul>
-      <li><span style="font-weight: bold;">Remember to include your
-abstract or the system won't permit the upload!</span></li>
-    </ul>
-  </ul>
-</ul>
-<span style="font-weight: bold;">For
+ style="font-weight: bold;">For
 Students Graduating in&nbsp; Fall 2022</span><br>
 <ul>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:497 Individual Study
+of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
 in
 Computer </span><span style="color: rgb(255, 102, 102);">Science<span
  style="color: rgb(0, 0, 0);"> </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
-either the <span style="font-weight: bold;">Spring 2022 </span>or <span
- style="font-weight: bold;">Summer 2022 </span>semester</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">during
+    </span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">a
+prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
-  <ul>
-    <li>... if you haven't already done so in a prior semester.</li>
-  </ul>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:498 Senior Honors
+of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
 Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
  style="font-weight: bold;">Fall 2022 </span>semester.<br>
     </span></span></li>
@@ -173,7 +79,7 @@ Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
  style="color: rgb(0, 0, 0);">At most <span
  style="font-weight: bold; text-decoration: underline;">six</span><span
  style="font-weight: bold;"> </span>credits
-of 3460:497/498 count towards graduation; schedule accordingly.</span></span></li>
+of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
   </ul>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">CS majors: complete the course
@@ -246,19 +152,16 @@ Students Graduating in Spring 2023<br>
   <li>CS majors: be registered for <span
  style="color: rgb(255, 102, 102);">2-3
 credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:497 Individual Study
+of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
 in
 Computer </span><span style="color: rgb(255, 102, 102);">Science<span
  style="color: rgb(0, 0, 0);"> </span></span><span
- style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">during
-    </span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">a
-prior semester</span></span><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
+the <span style="font-weight: bold;">Fall 2022 </span>semester</span></span><span
  style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
   <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
 credits</span>
-of <span style="color: rgb(255, 102, 102);">3460:498 Senior Honors
+of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
 Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
  style="font-weight: bold;">Spring 2023 </span>semester.</span></span></li>
   <ul>
@@ -266,7 +169,7 @@ Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
  style="color: rgb(0, 0, 0);">At most <span
  style="font-weight: bold; text-decoration: underline;">six</span><span
  style="font-weight: bold;"> </span>credits
-of 3460:497/498 count towards graduation; schedule accordingly.</span></span></li>
+of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
   </ul>
   <li>CS majors: <span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">complete the course substitution
@@ -324,6 +227,100 @@ abstract or the system won't permit the upload!</span></li>
     </ul>
   </ul>
 </ul>
+<span style="font-weight: bold;">For
+Students Graduating in Summer 2023</span>
+<ul>
+  <li>CS majors: have registered for <span
+ style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 497 Individual Study
+in
+Computer </span><span style="color: rgb(255, 102, 102);">Science<span
+ style="color: rgb(0, 0, 0);"> </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">for
+the <span style="font-weight: bold;">Spring 2023 </span>semester</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
+  <ul>
+    <li>... if you haven't already done so in a prior semester.</li>
+  </ul>
+  <li>CS majors: register for <span style="color: rgb(255, 102, 102);">2-3
+credits</span>
+of <span style="color: rgb(255, 102, 102);">CPSC 498 Senior Honors
+Project: Computer Science<span style="color: rgb(0, 0, 0);"> for the <span
+ style="font-weight: bold;">Summer 2023 </span>semester.<br>
+    </span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">At most <span
+ style="font-weight: bold; text-decoration: underline;">six</span><span
+ style="font-weight: bold;"> </span>credits
+of CPSC 497/498 count towards graduation; schedule accordingly.</span></span></li>
+  </ul>
+  <li>CS majors: <span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">complete the course substitution
+paperwork so 497/498 will
+count as a c.s. elective.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">Have
+a faculty sponsor in place and
+be&nbsp;</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">working on your project</span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">.</span></span></li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"><span style="font-style: italic;">Estimated
+    </span>deadlines </span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">(recommended
+by Honors College; <a
+ href="http://www.uakron.edu/honors/curriculum/honors-research-project-curriculum.dot">see
+here</a>):</span></span></li>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project</span></span><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);"> through <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);">
+      <span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
+ style="font-weight: bold;">Thursday December 1 2022</span><span
+ style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span style="font-weight: bold;"></span><span
+ style="font-weight: bold;"></span><span style="font-weight: bold;"> </span><span
+ style="font-style: italic;"></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Preliminary draft to research sponsor: <span
+ style="font-weight: bold;">Friday July 7 2023<br>
+      </span></span></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Subsequent draft to readers: <span
+ style="font-weight: bold;">Friday July 14 2023</span></span></span><span
+ style="color: rgb(255, 102, 102);"><span style="color: rgb(0, 0, 0);"></span></span></li>
+  </ul>
+  <ul>
+    <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Final draft to sponsor and readers: <span
+ style="font-weight: bold;">Tuesday July 25 2023 </span>(3 weeks
+before grades are due)</span></span></li>
+    <li>Final electronic submission of completed project report with
+all signatures <span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">to <a
+ href="http://ideaexchange.uakron.edu/honors_research_projects">Idea
+Exchange</a></span></span>: <span style="font-weight: bold;"></span><span
+ style="font-weight: bold;">Friday July 28 2023<br>
+      </span></li>
+    <ul>
+      <li><span style="font-weight: bold;">Remember to include your
+abstract or the system won't permit the upload!</span></li>
+    </ul>
+  </ul>
+</ul>
 <span style="font-weight: bold;">Other
 Honors Students</span><br>
 <span style="font-weight: bold;"></span><span style="font-weight: bold;"></span>
@@ -344,12 +341,6 @@ Honors distribution courses</span> by <span style="font-weight: bold;">April
 attend the Sophomore symposium in January.</li>
   <li><span style="color: rgb(255, 102, 102);"><span
  style="color: rgb(0, 0, 0);">Proposal submission for honors research
-project, <span style="font-weight: bold;">Summer 2023</span> grads: <span
- style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
- style="font-weight: bold;">Thursday December 1 2022 </span>(<span
- style="font-style: italic;">estimated</span>)</li>
-  <li><span style="color: rgb(255, 102, 102);"><span
- style="color: rgb(0, 0, 0);">Proposal submission for honors research
 project, <span style="font-weight: bold;">Fall 2023 </span>grads:<span
  style="font-weight: bold;"> </span></span></span><span
  style="font-weight: bold;">Wednesday </span><span
@@ -361,12 +352,18 @@ project, <span style="font-weight: bold;">Spring 2024 </span>grads: <span
  style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
  style="font-weight: bold;">Monday October 2 2023 </span>(<span
  style="font-style: italic;">estimated</span>)</li>
+  <li><span style="color: rgb(255, 102, 102);"><span
+ style="color: rgb(0, 0, 0);">Proposal submission for honors research
+project, <span style="font-weight: bold;">Summer 2024 </span>grads: <span
+ style="font-weight: bold; font-style: italic; text-decoration: underline;"></span></span></span><span
+ style="font-weight: bold;">Friday December 1 2023 </span>(<span
+ style="font-style: italic;">estimated</span>)</li>
 </ul>
 <span style="font-weight: bold;">Important Notes<br>
 </span>
 <ul>
   <li>CS majors will also complete a project as part of <span
- style="color: rgb(255, 102, 102);">3460:490 Senior Seminar in Computer
+ style="color: rgb(255, 102, 102);">CPSC 490 Senior Seminar in Computer
 Science</span> (taught Spring Semester every year). <span
  style="font-weight: bold;">By department policy that project is to be
 different from your Senior Honors Project; <span
@@ -378,9 +375,9 @@ experience gained from a co-op or internship will <span
 Senior Honors Project.</span></li>
   <li><span style="font-weight: bold;">Six</span> <span
  style="font-style: italic;">combined</span> credits of <span
- style="color: rgb(255, 102, 102);">3460:497 </span><span
+ style="color: rgb(255, 102, 102);">CPSC 497 </span><span
  style="font-weight: bold; text-decoration: underline;">and</span> <span
- style="color: rgb(255, 102, 102);">3460:498 </span>count as <span
+ style="color: rgb(255, 102, 102);">CPSC 498 </span>count as <span
  style="font-weight: bold; text-decoration: underline;">one</span><span
  style="font-weight: bold;"></span> 3-credit
 c.s. elective. Take both if you want to apply it to the major,
